# fullstack-webapp-template

./: .cz.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  Makefile  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yaml
backend/: LICENSE.md  Makefile  README.md  alembic-requirements.txt  alembic.ini  develop-requirements.txt  develop.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 7ce2fd1a52c8_initial_database_setup.py
backend/docker/: Dockerfile.alembic  Dockerfile.dramatiq  Dockerfile.pg
backend/src/template_jobs/: __init__.py  actors.py  broker.py
backend/tests/: conftest.py
backend/tests/actors/: test_job.py
backend/tests/api/: test_login.py  test_message_queue.py  test_profile.py  test_signup.py
frontend/: Makefile
infra/: _base-services.yaml  docker-compose-develop.yaml  docker-compose.yaml
