# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
# https://flit.pypa.io/en/latest/pyproject_toml.html
[build-system]
requires = ["flit_core >=3.2.0,<4.0.0"]
build-backend = "flit_core.buildapi"

[project]
name = "template_jobs"
requires-python = ">=3.13.0,<3.14.0"
authors = [{name = "Jens Troeger", email = "jens.troeger@light-speed.de"}]
maintainers = [{name = "Jens Troeger", email = "jens.troeger@light-speed.de"}]
dynamic = ["version", "description"]
license = {file = "LICENSE.md"}
readme = "README.md"
dependencies = [
    "dramatiq ==1.18.0",
    "dramatiq-pg ==0.12.0",
    "sqlalchemy[postgresql-psycopg2binary] ==2.0.41",
    "greenlet ==3.2.3",  # Remove with SQLA 2.1, see also https://github.com/sqlalchemy/sqlalchemy/issues/7714
]
keywords = []
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.scripts]

[project.entry-points]

[project.optional-dependencies]

[project.urls]
#Homepage =
#Changelog =
#Documentation =
#Issues =
